--- a/css/style.css
+++ b/css/style.css
@@ -1090,7 +1090,7 @@ body{
 
   }
   #keyart-1{
-    background-image: url('../pictures/parallax-1.2.png');
+    background-image: url('../pictures/walking-man.gif');
 
   }
   #keyart-2{
