--- a/css/style.css
+++ b/css/style.css
@@ -856,7 +856,7 @@ Social media buttons
 
 
 
-  @media screen and (min-width: 60em) {
+  @media screen and (min-width: 1280px) {
 
     .cards {
       max-width: none;
