--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ a:active{
 }
 
 
+
+
 /*--------------------------------------------------------------
 Breadcrumbs
 --------------------------------------------------------------*/
@@ -1021,7 +1023,9 @@ For big screen
 }
 
 
-
+#dropdownFront{
+  background-color: rgba(189, 189, 189, 0.1);
+}
 
 
 
@@ -1060,6 +1064,7 @@ For big screen
     position: absolute;
     min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
     z-index: 1;
     margin-top:10px;
 }
@@ -1070,6 +1075,10 @@ For big screen
     display: block;
     color: rgba(189, 189, 189, 1);
     position: relative;
+}
+
+.dropdownColor{
+  background-color: #242424;
 }
 
 .dropdown-content a:before{
@@ -1145,7 +1154,7 @@ For big screen
 }
 
 #navBar.scrolled{
-background: rgba(31,31,31,0.1);
+background: rgba(36, 36, 36, 0.7);
 
 }
 
